--- a/src/block/package.json
+++ b/src/block/package.json
@@ -15,6 +15,10 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
+		"@wordpress/block-editor": "^8.5.1",
+		"@wordpress/components": "^19.8.0",
+		"@wordpress/element": "^4.4.0",
+		"@wordpress/i18n": "^4.6.0",
 		"@wordpress/scripts": "^22.4.0"
 	}
 }
